同步LKMap的改动

--- a/libs/gltfio/materials/gltflite.mat.in
+++ b/libs/gltfio/materials/gltflite.mat.in
@@ -38,8 +38,21 @@ material {
         { type : sampler2d, name : emissiveMap },
 
         // Reflectance
-        { type : float, name : reflectance }
+        { type : float, name : reflectance },
+
+        // Clip Space Transform
+        {
+            type : float4x4,
+            precision : high,
+            name : cstransform
+        }
     ],
+}
+
+vertex {
+    void materialVertex(inout MaterialVertexInputs material) {
+        material.clipSpaceTransform = materialParams.cstransform;
+    }
 }
 
 fragment {
