--- a/libs/gltfio/materials/volume.mat.in
+++ b/libs/gltfio/materials/volume.mat.in
@@ -58,8 +58,21 @@ material {
         { type : mat3, name : volumeThicknessUvMatrix, precision: high },
 
         // IOR
-        { type : float, name : ior }
+        { type : float, name : ior },
+
+        // Clip Space Transform
+        {
+            type : float4x4,
+            precision : high,
+            name : cstransform
+        }
     ],
+}
+
+vertex {
+    void materialVertex(inout MaterialVertexInputs material) {
+        material.clipSpaceTransform = materialParams.cstransform;
+    }
 }
 
 fragment {
